-> Sending mail when instance disconnect from WhatsApp;

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,12 @@ CODECHAT_API_KEY = t8OOEeISKzpmc3jjcMqBWYSaJsafdefer
 # SE DESEJA ASSINAR A MENSAGEM COM O NOME DO USUÁRIO MUDE PARA true
 TOSIGN=false
 IMPORT_MESSAGES_SENT=false
+
+MAIL_NOTIFICATIONS=
+MAIL_FROM=
+
+SMTP_HOST=
+SMTP_PORT=
+SMTP_IS_SECURE=
+SMTP_USER=
+SMTP_PASSWORD=
