--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mime": "^3.0.0",
-    "mime-types": "^2.1.35"
+    "mime-types": "^2.1.35",
+    "nodemailer": "^6.9.3"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.4",
